# python-project-51

./: Makefile  README.md  pyproject.toml  ru-hexlet-io-courses.html  setup.cfg
.github/workflows/: ci.yml
page_loader/: __init__.py  cli.py  download.py  html.py  logger.py  url.py
page_loader/scripts/: page_loader.py
ru-hexlet-io-courses_files/: ru-hexlet-io-courses.html  ru-hexlet-io-lessons.rss
tests/: test_page_loader.py
tests/fixtures/: expected.html  raw.html  script.js  styles.css
