[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["vera.k <vera_boris@tut.by>"]
packages = [
	{ include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
