[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["vera.k <vera_boris@tut.by>"]
packages = [
	{ include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
progress = "^1.6"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.page_loader:main"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
requests-mock = "^1.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"